<resources>
    <string name="app_name">Wethar Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeFragment">"Home"</string>
    <string name="favouriteFragment">Favorite</string>
    <string name="settingsFragement">Settings</string>
    <string name="alertFragement">Settings</string>
    <string name="tv_location">Location</string>
    <string name="tv_language">Language</string>
    <string name="tv_windSpeed">Wind Speed</string>
    <string name="tv_tempreture">Temperature</string>
    <string name="radio_Gps">GPS</string>
    <string name="radio_Map">Map</string>
    <string name="radio_english">English</string>
    <string name="radio_arabic">Arabic</string>
    <string name="radio_meter">Meter/Sec</string>
    <string name="radio_mile">Mile/Hour</string>
    <string name="radio_cel">Celsius</string>
    <string name="radio_kel">Kelvin</string>
    <string name="tv_metric" translatable="false">Metric (Temperature by Celsius and Wind Speed by Meter/Sec )</string>
    <string name="tv_standard" translatable="false">Standard (Temperature by Kelvin and Wind Speed by Meter/Sec )</string>
    <string name="tv_imprial" translatable="false">Imprial (Temperature by Fahrenheit and Wind Speed by Mile/Hour)</string>
    <string name="tv_unites" translatable="false">Unites</string>
    <string name="radio_fah">Fahrenheit</string>
    <string name="tv_Humidity">Humidity</string>
    <string name="tv_Pressure">Pressure</string>
    <string name="tv_Visability">Visability</string>
    <string name="tv_WindSpeed">Wind Speed</string>
    <string name="tv_Cloud">Cloud</string>
    <string name="tv_UV">UV</string>
    <string name="tv_menue_home">Home</string>
    <string name="tv_menue_fav">Favorite</string>
    <string name="tv_menue_alert">Alert</string>
    <string name="tv_menue_settings">Settings</string>
    <string name="delete_message" translatable="false">"You will lose it from your list"</string>
    <string name="delete_title" translatable="false">""Wait ! Are You Sure You Want To Delete This Item ?""</string>
    <string name="delete_accepet" translatable="false">"Yes"</string>
    <string name="delete_refuse" translatable="false">"Cancel"</string>
    <string name="delete_Toast" translatable="false">"Removed From Your List"</string>
    <string name="snakbar_msg" translatable="false">"This Is The Last Data When You Are Connected To The Internet"</string>
    <string name="alarm_btn">Save</string>
    <string name="alarm_dismiss">Dismiss</string>
    <string name="choose_location">Choose Your Location</string>
    <string name="enable_radio">Enable</string>
    <string name="disable_radio">Disable</string>
    <string name="empty_date" translatable="false">"This Fields Must Be Not Empty"</string>
    <string name="valid_date" translatable="false">"Please Choose Valid Date"</string>
    <string name="tv_notification">Notification</string>
    <string name="no_internet">"There is No Internet, Please Check Your Conniction"</string>
    <string name="plz_choose_location">Please Choose Your Location</string>

</resources>