<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakground4"
    tools:context=".settings.SettingsFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_location"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/tv_location"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RadioGroup
            android:id="@+id/location_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_gps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/radio_Gps"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radio_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/radio_Map"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

        </RadioGroup>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/tv_language"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView3">

        <RadioGroup
            android:id="@+id/language_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/radio_english"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radio_arabic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/radio_arabic"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

        </RadioGroup>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView5"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <TextView
            android:id="@+id/tv_tempreture"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:text="@string/tv_unites"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <RadioGroup
            android:id="@+id/temp_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_standard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/tv_standard"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radio_metric"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/tv_metric"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radio_imprial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/tv_imprial"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

        </RadioGroup>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardNotification"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">


        <TextView
            android:id="@+id/tv_Notification"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/tv_notification"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNotification"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2a4359"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardNotification"
        app:layout_constraintStart_toStartOf="@+id/cardNotification"
        app:layout_constraintTop_toBottomOf="@+id/cardNotification">

        <RadioGroup
            android:id="@+id/notification_radiogroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_enable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/enable_radio"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radio_disable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:text="@string/disable_radio"
                android:textColor="@color/white"
                android:textStyle="bold"></RadioButton>

        </RadioGroup>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>